# jwt-auth-2

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env
migrations/: 0001.sql
src/: lib.rs  main.rs
src/handlers/user/: auth_test.rs  delete.rs  login.rs  new.rs
src/handlers/user/change_credentials/: change_password.rs  change_username.rs
src/handlers/user/refresh/: access.rs  access_token.rs  new_access.rs  refresh.rs  refresh_access.rs  refresh_refresh.rs  refresh_token.rs
src/middleware/user/: auth.rs  refresh_auth.rs
src/models/: appstate.rs  auth_user.rs  user.rs  user_permission.rs
src/util/: cookies.rs  hashing.rs  validation.rs
src/util/jwt/: access_token.rs  claims.rs  general.rs  refresh_token.rs
