[package]
name = "jwt-auth-2"
version = "0.1.0"
edition = "2021"

[lib]
doc = true
path = "src/lib.rs"
name = "jwt_auth_lib"


[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
axum =  { version = "0.8.1", features = ["tokio", "tower-log", "json", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["macros", "runtime-tokio-native-tls", "sqlite", "sqlx-sqlite", "_sqlite", "sqlx-macros", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = "0.4.40"
argon2 = { version = "0.5.3", features = ["password-hash"]}
jsonwebtoken = "9.3.1"
axum-macros = "0.5.0"
tower = "0.5.2"
async-trait = "0.1.88"
axum-extra = { version = "0.10.0", features = ["cookie", "cookie-private", "form"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing", "tracing-log", "fmt"] }
